2007-09-29  Lars Lindner  <lars.lindner@gmail.com>

Reviewed by Adam.

        ChromeClientGtk.cpp does not implement mouseDidMoveOverElement()
        http://bugs.webkit.org/show_bug.cgi?id=15299

        Implementing "hovering_over_link" signal.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::mouseDidMoveOverElement):


git-svn-id: svn://svn.chromium.org/blink/trunk@25818 bbb929c8-8fbe-4397-9dbb-9b2b20218538